# lotto-dashboard

./: .gitignore  DEPLOYMENT.md  README.md  index.html  pyproject.toml
.github/workflows/: weekly-update.yml
data/: draws.csv  lotto.db
docs/: RESEARCH.md  index.html
docs/data/: draws.csv  latest.json
examples/: synthetic_draws.csv
lotto_analyzer/: __init__.py  analysis.py  cli.py  dashboard.py  fetcher.py  generator.py  models.py  pipeline.py  recommendation.py  storage.py
scripts/: preflight.ps1  publish-github.ps1
tests/: test_analysis.py  test_dashboard.py  test_fetcher.py  test_generator.py  test_models.py  test_pipeline.py  test_recommendation.py  test_storage.py
